[Feature]Added Remove-service to Management module (#4858)
* [Feature]Remove-Service added to Management module

* [Feature]Capitalization

* [Feature]Added test cases for Remove-Service, Removed return value

* [Feature]Documentation from copy-paste code corrected to reflect the new function

* [Feature]Erroraction to be sure that an error is thrown in testcase

* [Feature]Removed direct reference to module in Pester test

* [Feature]Removed extra line in test

* [Feature]Use FullyQualifiedErrorId in Remove-Service test without a valid servicename

* [Feature]Exposed Remove-Service

* [Feature]Consistent casing, Named Arguments & Remove incorrect exception on cleanup

* [Feature]Remove-Service test should fail if the service was not removed

* [Feature]Cleanup comments & add Remove-Service for CI

* [Feature]Remove-Service in CI set in alphabetic order

* [Feature]Use ParameterSetName instead of _ParameterSetName and rewrite test which used the function class directly

* Revert "[Feature]Use ParameterSetName instead of _ParameterSetName and rewrite test which used the function class directly"

This reverts commit da41f7deb811f32538e0dc7f0d811646ceb8acf8.

* [Feature]Remove _ParameterSetName check & added test for pipeline input in
Set-Service

--- a/src/Microsoft.PowerShell.Commands.Management/resources/ServiceResources.resx
+++ b/src/Microsoft.PowerShell.Commands.Management/resources/ServiceResources.resx
@@ -171,6 +171,9 @@
   <data name="CouldNotNewServiceDescription" xml:space="preserve">
     <value>Service '{1} ({0})' was created, but its description cannot be configured due to the following error: {2}</value>
   </data>
+  <data name="CouldNotRemoveService" xml:space="preserve">
+    <value>Service '{1} ({0})' cannot be removed due to the following error: {2}</value>
+  </data> 
   <data name="CouldNotAccessDependentServices" xml:space="preserve">
     <value>'Cannot access dependent services of '{1} ({0})'</value>
   </data>
